# PR1-Lessons

./: .gitignore  README.md
es 1 - 1910/: CMakeLists.txt  main.c
es 1 - 1910/esercizi/: eses.c
es 2 - 2610/: CMakeLists.txt  es3.c
es-t3/: main.c
es1-1910/: es4.c
es2-2610/: es2.c
es3-2311/: CMakeLists.txt  es1.c  es2.c  es3.c  es4.c  es5.c  es6.c  es7.c  es8.c
es4-2811/: CMakeLists.txt  student.c
es4.5-2811/: CMakeLists.txt  studentB.c
es5-casa/: CMakeLists.txt  main.c
es5.5-1912/: CMakeLists.txt  student.c
lez 1 - 0510/: first.c
lez 2 - 1010/: cast.c
lez 4 - 1710/: CMakeLists.txt
lez 5 - 2410/: CMakeLists.txt  ripasso1.c
lez 6 - 0711/: CMakeLists.txt
lez 7 - 1411/: CMakeLists.txt  matrixes.c
lez0510/: CMakeLists.txt  first.c  variables.c
lez0711/: CMakeLists.txt  arrays.c  for.c
lez10-0512/: CMakeLists.txt  tipi.c
lez1010/: CMakeLists.txt  scanf.c
lez11-0512/: CMakeLists.txt  tipi.c
lez11-0712/: CMakeLists.txt  pointers.c  subroutines.c
lez11-0712/Esercizi/: es1.c  es10.c  es11.c  es12-13.c  es12.c  es14.c  es14.h  es2.c  es3.c  es4.c  es6.c  es7.c  es8.c  main.c
lez12-1212/: CMakeLists.txt  es1.c  es11-12.c  es2.c  es5.c  es7.c  es9-10.c  matrici.c  matrici2.c
lez1210/: CMakeLists.txt  ifelse.c  mathh.c
lez13-1312/: CMakeLists.txt  binsW.c  filesR.c  filesW.c  utility.c
lez14-1412/: CMakeLists.txt  esercizi.c  esercizi.h  liste.c  main.c  ricorsione.c
lez15-0901/: CMakeLists.txt  main.c  (+1 more)
lez6-0711/: CMakeLists.txt
lez6-0711/Esercizi/: es9.c
lez6-0711/EserciziA/: es1.c  es11.c  es6.c
lez6-0711/EserciziB/: es1b.c  es2b.c  es3b.c  es4b.c
(+110 files in other folders)
