cmake_minimum_required(VERSION 3.26)
project(lez11_0712 C)

set(CMAKE_C_STANDARD 99)

add_executable(lez11_0712
		Esercizi/es12.c
		#		Esercizi/es11.c
#		pointers.c
#		subroutines.c
#		Esercizi/es1.c
#		Esercizi/es2.c
#		Esercizi/es3.c
#		Esercizi/es4.c
#		Esercizi/es6.c
#		Esercizi/es8.c
#		Esercizi/es10.c
#		Esercizi/es14.c
		)
