cmake_minimum_required(VERSION 3.26)
project(lez6-0711 C)

set(CMAKE_C_STANDARD 99)

add_executable(lez0711 for.c
        arrays.c
		Esercizi/es1.c
		Esercizi/es2.c
		Esercizi/es3.c
		Esercizi/es4.c
		Esercizi/es5.c
		Esercizi/es6.c
		Esercizi/es7.c
		Esercizi/es8.c
		Esercizi/es9.c
		Esercizi/es10.c
		Esercizi/es11.c)
