cmake_minimum_required(VERSION 3.26)
project(lez6-0711 C)

set(CMAKE_C_STANDARD 99)

add_executable(lez0711 for.c
        arrays.c
		EserciziA/es1.c
		EserciziA/es2.c
		EserciziA/es3.c
		EserciziA/es4.c
		EserciziA/es5.c
		EserciziA/es6.c
		EserciziA/es7.c
		EserciziA/es8.c
		EserciziA/es9.c
		EserciziA/es10.c
		EserciziA/es11.c
		EserciziB/es1b.c
		EserciziB/es2b.c
		EserciziB/es3b.c
		EserciziB/es4b.cu
		EserciziB/es4b.c)
